--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <div id="appIndex">
     </div>
-    <script src="./dist/build.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 </html>
