--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN" data-ng-app="player">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>虾哔哔</title>
+    <title>
+      7nxo
+    </title>
+    <meta name="keywords" content="7nxo">
+    <meta name="description" content="7nxo" />
+    <meta name="renderer" content="webkit">
+    <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
+    <meta content="always" name="referrer">
     <script src="//cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/moment.js/2.10.6/moment-with-locales.min.js"></script>
-</head>
-<body>
-    <div id="appIndex">
-    </div>
-    <script src="./dist/common.js"></script>
-</body>
+    <script src="https://cdn.bootcss.com/moment.js/2.10.6/moment-with-locales.min.js"></script>
+    <body>
+        <div id="app">
+        </div>
+        <script src="/dist/main.js"></script>
+    </body>
 </html>
